fix: swag docs tidy tags
