# src/docs/swagger.json
@@ -100,7 +100,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin-get"
+                    "admin-resource"
                 ],
                 "summary": "管理员按类型查询基础资源",
                 "parameters": [
@@ -256,7 +256,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin-operation"
+                    "admin-resource"
                 ],
                 "summary": "管理员按类型创建基础资源",
                 "parameters": [
@@ -384,7 +384,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "admin-update"
+                    "admin-resource"
                 ],
                 "summary": "管理员按类型更新基础资源",
                 "parameters": [
@@ -758,7 +758,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-operation"
                 ],
                 "summary": "用户登出（token版号增加一）",
                 "responses": {
@@ -793,7 +793,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-update"
                 ],
                 "summary": "修改用户头像",
                 "parameters": [
@@ -855,7 +855,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-update"
                 ],
                 "summary": "修改用户密码",
                 "parameters": [
@@ -919,7 +919,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "profile"
+                    "profile-update"
                 ],
                 "summary": "修改用户名",
                 "parameters": [
